--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/superAo005/upload-server"
   },
   "author": "",
   "license": "ISC",
